[package]
name          = "mio-misc"
version       = "1.2.1"
license       = "MIT"
authors       = ["Onur Ozduygu"]
description   = "Miscellaneous components for use with Mio"
documentation = "https://docs.rs/mio-misc"
repository    = "https://github.com/onurzdg/mio-misc"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking", "mio"]
categories    = ["asynchronous"]
edition       = "2018"

[dependencies]
mio = {version ="0.7", features = ["os-poll", "tcp"]}
log = "0.4"
crossbeam = "0.8"
crossbeam-queue = "0.3"

[dev-dependencies]
rand = "0.8"

[[test]]
name = "test"
path = "test/mod.rs"
