[package]
name          = "mio-misc"
version       = "2.1.0"
license       = "MIT"
authors       = ["onur"]
description   = "Miscellaneous components for use with Mio"
documentation = "https://docs.rs/mio-misc"
repository    = "https://github.com/onurzdg/mio-misc"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking", "mio"]
categories    = ["asynchronous"]
edition       = "2021"

[dependencies]
mio = { version ="1.0.4", features = ["os-poll", "net"] }
log = "0.4"
crossbeam = "0.8"
crossbeam-queue = "0.3"

[dev-dependencies]
rand = "0.9"

[[test]]
name = "test"
path = "test/mod.rs"
